Add Bitpanda hero images

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -16,18 +16,19 @@
 <meta property="og:url" content="https://avis-invest.com/bitpanda/"/>
 <meta property="og:title" content="Avis Bitpanda | Plateforme crypto (guide &amp; risques)"/>
 <meta property="og:description" content="Avis Bitpanda : plateforme crypto pour acheter, vendre et conserver des crypto-actifs. Aperçu des fonctionnalités, des frais et des risques pour débuter."/>
-<meta property="og:image" content="https://avis-invest.com/images/logo.png"/>
+<meta property="og:image" content="https://avis-invest.com/images/image-hero-fr.png"/>
+<meta property="og:image:alt" content="Capture d’écran Bitpanda : actions &amp; ETFs et application mobile"/>
 <meta property="og:locale" content="fr_FR"/>
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Avis Bitpanda | Plateforme crypto (guide &amp; risques)"/>
 <meta name="twitter:description" content="Avis Bitpanda : plateforme crypto pour acheter, vendre et conserver des crypto-actifs. Aperçu des fonctionnalités, des frais et des risques pour débuter."/>
-<meta name="twitter:image" content="https://avis-invest.com/images/logo.png"/>
+<meta name="twitter:image" content="https://avis-invest.com/images/image-hero-fr.png"/>
 <!-- Styles -->
 <link as="style" href="/style.min.css" rel="preload"/>
 <link href="/style.min.css" rel="stylesheet"/>
 <!-- Consent Mode v2 (par défaut refusé). GA4 sera chargé après consentement via main.js -->
-<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/bitpanda/"/><meta name="twitter:image:alt" content="Avis Bitpanda | Plateforme crypto (guide &amp; risques)"/><script>
+<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/bitpanda/"/><meta name="twitter:image:alt" content="Capture d’écran Bitpanda : actions &amp; ETFs et application mobile"/><script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('consent', 'default', {
@@ -156,7 +157,7 @@
 <p class="small note">Les crypto-actifs peuvent varier fortement à la hausse comme à la baisse. Investissez uniquement ce que vous pouvez vous permettre de perdre.</p>
 </div>
 <div class="hero-media">
-<img alt="Illustration portefeuille : crypto, actions/ETF et métaux" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
+<img alt="Capture d’écran Bitpanda : actions &amp; ETFs et application mobile" decoding="async" fetchpriority="high" height="600" src="/images/image-hero-fr.png" width="960"/>
 </div>
 </div>
 </section>
