--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -16,18 +16,19 @@
 <meta property="og:url" content="https://avis-invest.com/de/bitpanda/"/>
 <meta property="og:title" content="Bitpanda Bewertung | Krypto-Plattform (Guide &amp; Risiken)"/>
 <meta property="og:description" content="Bitpanda Bewertung: Krypto-Plattform zum Kaufen, Verkaufen und Halten von Krypto-Assets. Überblick über Funktionen, Gebühren (high-level) und Risiken."/>
-<meta property="og:image" content="https://avis-invest.com/images/logo.png"/>
+<meta property="og:image" content="https://avis-invest.com/images/image-hero-de.png"/>
+<meta property="og:image:alt" content="Bitpanda‑Screenshot: Aktien &amp; ETFs und Mobile App"/>
 <meta property="og:locale" content="de_DE"/>
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Bitpanda Bewertung | Krypto-Plattform (Guide &amp; Risiken)"/>
 <meta name="twitter:description" content="Bitpanda Bewertung: Krypto-Plattform zum Kaufen, Verkaufen und Halten von Krypto-Assets. Überblick über Funktionen, Gebühren (high-level) und Risiken."/>
-<meta name="twitter:image" content="https://avis-invest.com/images/logo.png"/>
+<meta name="twitter:image" content="https://avis-invest.com/images/image-hero-de.png"/>
 <!-- Styles -->
 <link as="style" href="/style.min.css" rel="preload"/>
 <link href="/style.min.css" rel="stylesheet"/>
 <!-- Consent Mode v2 (default denied). GA4 loads after consent via main.js -->
-<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/de/bitpanda/"/><meta name="twitter:image:alt" content="Bitpanda Bewertung | Krypto-Plattform (Guide &amp; Risiken)"/><script>
+<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/de/bitpanda/"/><meta name="twitter:image:alt" content="Bitpanda‑Screenshot: Aktien &amp; ETFs und Mobile App"/><script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('consent', 'default', {
@@ -156,7 +157,7 @@
 <p class="small note">Krypto-Assets können stark steigen oder fallen. Investieren Sie nur, was Sie sich leisten können zu verlieren.</p>
 </div>
 <div class="hero-media">
-<img alt="Portfolio-Illustration: Krypto, Aktien/ETFs und Metalle" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
+<img alt="Bitpanda‑Screenshot: Aktien &amp; ETFs und Mobile App" decoding="async" fetchpriority="high" height="600" src="/images/image-hero-de.png" width="960"/>
 </div>
 </div>
 </section>
