--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -16,18 +16,19 @@
 <meta property="og:url" content="https://avis-invest.com/en/bitpanda/"/>
 <meta property="og:title" content="Bitpanda review | Crypto platform (guide &amp; risks)"/>
 <meta property="og:description" content="Bitpanda review: crypto platform to buy, sell and hold crypto assets. Overview of features, fees (high-level) and key risks to get started."/>
-<meta property="og:image" content="https://avis-invest.com/images/logo.png"/>
+<meta property="og:image" content="https://avis-invest.com/images/image-hero-en.png"/>
+<meta property="og:image:alt" content="Bitpanda screenshot: stocks &amp; ETFs and mobile app"/>
 <meta property="og:locale" content="en_US"/>
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Bitpanda review | Crypto platform (guide &amp; risks)"/>
 <meta name="twitter:description" content="Bitpanda review: crypto platform to buy, sell and hold crypto assets. Overview of features, fees (high-level) and key risks to get started."/>
-<meta name="twitter:image" content="https://avis-invest.com/images/logo.png"/>
+<meta name="twitter:image" content="https://avis-invest.com/images/image-hero-en.png"/>
 <!-- Styles -->
 <link as="style" href="/style.min.css" rel="preload"/>
 <link href="/style.min.css" rel="stylesheet"/>
 <!-- Consent Mode v2 (default denied). GA4 loads after consent via main.js -->
-<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/en/bitpanda/"/><meta name="twitter:image:alt" content="Bitpanda review | Crypto platform (guide &amp; risks)"/><script>
+<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/en/bitpanda/"/><meta name="twitter:image:alt" content="Bitpanda screenshot: stocks &amp; ETFs and mobile app"/><script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('consent', 'default', {
@@ -156,7 +157,7 @@
 <p class="small note">Crypto assets can move up or down sharply. Only invest what you can afford to lose.</p>
 </div>
 <div class="hero-media">
-<img alt="Portfolio illustration: crypto, stocks/ETFs and metals" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
+<img alt="Bitpanda screenshot: stocks &amp; ETFs and mobile app" decoding="async" fetchpriority="high" height="600" src="/images/image-hero-en.png" width="960"/>
 </div>
 </div>
 </section>
