--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -16,18 +16,19 @@
 <meta property="og:url" content="https://avis-invest.com/es/bitpanda/"/>
 <meta property="og:title" content="Reseña de Bitpanda | Plataforma cripto (guía y riesgos)"/>
 <meta property="og:description" content="Reseña de Bitpanda: plataforma cripto para comprar, vender y mantener criptoactivos. Resumen de funciones, comisiones (a alto nivel) y riesgos para empezar."/>
-<meta property="og:image" content="https://avis-invest.com/images/logo.png"/>
+<meta property="og:image" content="https://avis-invest.com/images/image-hero-es.png"/>
+<meta property="og:image:alt" content="Captura de pantalla de Bitpanda: acciones y ETFs y app móvil"/>
 <meta property="og:locale" content="es_ES"/>
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="Reseña de Bitpanda | Plataforma cripto (guía y riesgos)"/>
 <meta name="twitter:description" content="Reseña de Bitpanda: plataforma cripto para comprar, vender y mantener criptoactivos. Resumen de funciones, comisiones (a alto nivel) y riesgos para empezar."/>
-<meta name="twitter:image" content="https://avis-invest.com/images/logo.png"/>
+<meta name="twitter:image" content="https://avis-invest.com/images/image-hero-es.png"/>
 <!-- Styles -->
 <link as="style" href="/style.min.css" rel="preload"/>
 <link href="/style.min.css" rel="stylesheet"/>
 <!-- Consent Mode v2 (default denied). GA4 loads after consent via main.js -->
-<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/es/bitpanda/"/><meta name="twitter:image:alt" content="Reseña de Bitpanda | Plataforma cripto (guía y riesgos)"/><script>
+<meta property="og:site_name" content="avis-invest.com"/><meta name="twitter:url" content="https://avis-invest.com/es/bitpanda/"/><meta name="twitter:image:alt" content="Captura de pantalla de Bitpanda: acciones y ETFs y app móvil"/><script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){ dataLayer.push(arguments); }
     gtag('consent', 'default', {
@@ -156,7 +157,7 @@
 <p class="small note">Los criptoactivos pueden subir o bajar rápidamente. Invierta solo lo que pueda permitirse perder.</p>
 </div>
 <div class="hero-media">
-<img alt="Ilustración de cartera: cripto, acciones/ETF y metales" decoding="async" fetchpriority="high" height="520" src="/images/bitpanda-hero.svg" width="800"/>
+<img alt="Captura de pantalla de Bitpanda: acciones y ETFs y app móvil" decoding="async" fetchpriority="high" height="600" src="/images/image-hero-es.png" width="960"/>
 </div>
 </div>
 </section>
