Add Bitpanda to navigation

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -122,6 +122,7 @@
 <ul id="nav-menu">
 <li><a href="/">Accueil</a></li>
 <li><a href="/blog/">Blog</a></li>
+<li><a class="active" href="/bitpanda/">Bitpanda</a></li>
 <li><a href="/mentions-legales/">Mentions légales</a></li>
 <li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
 </ul>
