--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -122,6 +122,7 @@
 <ul id="nav-menu">
 <li><a href="/en/">Home</a></li>
 <li><a href="/en/blog/">Blog</a></li>
+<li><a class="active" href="/en/bitpanda/">Bitpanda</a></li>
 <li><a href="/en/legal-notice/">Legal notice</a></li>
 <li><a href="/en/privacy-policy/">Privacy</a></li>
 </ul>
