--- a/en/privacy-policy/index.html
+++ b/en/privacy-policy/index.html
@@ -115,6 +115,7 @@
 <ul id="nav-menu">
 <li><a href="/en/">Home</a></li>
 <li><a href="/en/blog/">Blog</a></li>
+<li><a href="/en/bitpanda/">Bitpanda</a></li>
 <li><a href="/en/legal-notice/">Legal notice</a></li>
 <li><a class="active" href="/en/privacy-policy/">Privacy</a></li>
 </ul>
