--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -122,6 +122,7 @@
 <ul id="nav-menu">
 <li><a href="/es/">Home</a></li>
 <li><a href="/es/blog/">Blog</a></li>
+<li><a class="active" href="/es/bitpanda/">Bitpanda</a></li>
 <li><a href="/es/legal-notice/">Aviso legal</a></li>
 <li><a href="/es/privacy-policy/">Privacidad</a></li>
 </ul>
