--- a/politiques-de-confidentialite/index.html
+++ b/politiques-de-confidentialite/index.html
@@ -115,6 +115,7 @@
 <ul id="nav-menu">
 <li><a href="/">Accueil</a></li>
 <li><a href="/blog/">Blog</a></li>
+<li><a href="/bitpanda/">Bitpanda</a></li>
 <li><a href="/mentions-legales/">Mentions légales</a></li>
 <li><a class="active" href="/politiques-de-confidentialite/">Confidentialité</a></li>
 </ul>
