Header: burger menu + Bitpanda CTA

--- a/en/blog-1/index.html
+++ b/en/blog-1/index.html
@@ -116,6 +116,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/blog-1/" hreflang="de">DE</a>
 </div>
+<a class="btn ghost" data-aff="bitpanda" href="/en/bitpanda/#open-account" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start on eToro</a>
 </div>
 </div>
