--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -138,6 +138,7 @@
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="btn cta" data-aff="bitpanda" href="#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Descubrir Bitpanda</a>
+<a class="btn ghost" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
 </div>
 </div>
 </header>
