--- a/es/blog-2/index.html
+++ b/es/blog-2/index.html
@@ -101,6 +101,19 @@
 <li><a href="/es/privacy-policy/">Privacidad</a></li>
 </ul>
 </nav>
+<div class="header-actions">
+<div aria-label="Cambiar idioma" class="lang-switch">
+<a data-lang="fr" href="/blog-2/" hreflang="fr">FR</a>
+<span class="sep">|</span>
+<a data-lang="en" href="/en/blog-2/" hreflang="en">EN</a>
+<span class="sep">|</span>
+<a aria-current="page" class="active" data-lang="es" href="/es/blog-2/" hreflang="es">ES</a>
+<span class="sep">|</span>
+<a data-lang="de" href="/de/blog-2/" hreflang="de">DE</a>
+</div>
+<a class="btn ghost" data-aff="bitpanda" href="/es/bitpanda/#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
+</div>
 </div>
 </header>
 <main aria-labelledby="article-title" class="container article">
