--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -108,6 +108,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/legal-notice/" hreflang="de">DE</a>
 </div>
+<a class="btn ghost" data-aff="bitpanda" href="/bitpanda/#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
 </div>
 </div>
