--- a/blog-2/index.html
+++ b/blog-2/index.html
@@ -102,6 +102,19 @@
 <li><a href="/politiques-de-confidentialite/">Confidentialité</a></li>
 </ul>
 </nav>
+<div class="header-actions">
+<div aria-label="Changer de langue" class="lang-switch">
+<a aria-current="page" class="active" data-lang="fr" href="/blog-2/" hreflang="fr">FR</a>
+<span class="sep">|</span>
+<a data-lang="en" href="/en/blog-2/" hreflang="en">EN</a>
+<span class="sep">|</span>
+<a data-lang="es" href="/es/blog-2/" hreflang="es">ES</a>
+<span class="sep">|</span>
+<a data-lang="de" href="/de/blog-2/" hreflang="de">DE</a>
+</div>
+<a class="btn ghost" data-aff="bitpanda" href="/bitpanda/#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
+</div>
 </div>
 </header>
 <main aria-labelledby="article-title" class="container article">
