--- a/en/index.html
+++ b/en/index.html
@@ -106,6 +106,7 @@
 <a data-lang="de" href="/de/" hreflang="de">DE</a>
 </div>
 <!-- Global CTA -->
+<a class="btn ghost" data-aff="bitpanda" href="/en/bitpanda/#open-account" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start on eToro</a>
 </div>
 </div>
