--- a/es/privacy-policy/index.html
+++ b/es/privacy-policy/index.html
@@ -129,6 +129,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/privacy-policy/" hreflang="de">DE</a>
 </div>
+<a class="btn ghost" data-aff="bitpanda" href="/es/bitpanda/#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
 </div>
 </div>
