Header: clarify partner CTAs

--- a/es/index.html
+++ b/es/index.html
@@ -105,7 +105,7 @@
 <a data-lang="de" href="/de/" hreflang="de">DE</a>
 </div>
 <!-- Global CTA -->
-<a class="btn ghost" data-aff="bitpanda" href="/es/bitpanda/#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
+<a class="btn ghost" href="/es/bitpanda/">Reseña Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
 </div>
 </div>
