--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -138,7 +138,7 @@
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Découvrir Bitpanda</a>
-<a class="btn ghost" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
+<a class="btn ghost" href="/">Avis eToro</a>
 </div>
 </div>
 </header>
