--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -138,7 +138,7 @@
 <a aria-current="page" class="active" data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Bitpanda entdecken</a>
-<a class="btn ghost" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start auf eToro</a>
+<a class="btn ghost" href="/de/">eToro Bewertung</a>
 </div>
 </div>
 </header>
