--- a/en/privacy-policy/index.html
+++ b/en/privacy-policy/index.html
@@ -130,7 +130,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/privacy-policy/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" data-aff="bitpanda" href="/en/bitpanda/#open-account" rel="sponsored noopener noreferrer" target="_blank">Bitpanda</a>
+<a class="btn ghost" href="/en/bitpanda/">Bitpanda review</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start on eToro</a>
 </div>
 </div>
