Header: make partner review link secondary

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -136,7 +136,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/">Avis eToro</a>
+<a class="header-link" href="/">Avis eToro</a>
 <a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Découvrir Bitpanda</a>
 </div>
 </div>
