--- a/de/blog-1/index.html
+++ b/de/blog-1/index.html
@@ -114,7 +114,7 @@
 <span class="sep">|</span>
 <a aria-current="page" class="active" data-lang="de" href="/de/blog-1/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/de/bitpanda/">Bitpanda Bewertung</a>
+<a class="header-link" href="/de/bitpanda/">Bitpanda Bewertung</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start auf eToro</a>
 </div>
 </div>
