--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -136,7 +136,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/en/">eToro review</a>
+<a class="header-link" href="/en/">eToro review</a>
 <a class="btn cta" data-aff="bitpanda" href="#open-account" rel="sponsored noopener noreferrer" target="_blank">Discover Bitpanda</a>
 </div>
 </div>
