--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -136,7 +136,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/es/">Reseña eToro</a>
+<a class="header-link" href="/es/">Reseña eToro</a>
 <a class="btn cta" data-aff="bitpanda" href="#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Descubrir Bitpanda</a>
 </div>
 </div>
