--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -136,7 +136,7 @@
 <span class="sep">|</span>
 <a aria-current="page" class="active" data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/de/">eToro Bewertung</a>
+<a class="header-link" href="/de/">eToro Bewertung</a>
 <a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Bitpanda entdecken</a>
 </div>
 </div>
