--- a/de/index.html
+++ b/de/index.html
@@ -104,7 +104,7 @@
 <a aria-current="page" class="active" data-lang="de" href="/de/" hreflang="de">DE</a>
 </div>
 <!-- Global CTA -->
-<a class="btn ghost" href="/de/bitpanda/">Bitpanda Bewertung</a>
+<a class="header-link" href="/de/bitpanda/">Bitpanda Bewertung</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start auf eToro</a>
 </div>
 </div>
