--- a/es/blog-2/index.html
+++ b/es/blog-2/index.html
@@ -110,7 +110,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/blog-2/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/es/bitpanda/">Reseña Bitpanda</a>
+<a class="header-link" href="/es/bitpanda/">Reseña Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
 </div>
 </div>
