--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <a data-lang="de" href="/de/" hreflang="de">DE</a>
 </div>
 <!-- CTA global -->
-<a class="btn ghost" href="/bitpanda/">Avis Bitpanda</a>
+<a class="header-link" href="/bitpanda/">Avis Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
 </div>
 </div>
