--- a/politiques-de-confidentialite/index.html
+++ b/politiques-de-confidentialite/index.html
@@ -129,7 +129,7 @@
 <span class="sep">|</span>
 <a data-lang="de" href="/de/privacy-policy/" hreflang="de">DE</a>
 </div>
-<a class="btn ghost" href="/bitpanda/">Avis Bitpanda</a>
+<a class="header-link" href="/bitpanda/">Avis Bitpanda</a>
 <a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
 </div>
 </div>
