Header: clarify primary CTA labels

--- a/bitpanda/index.html
+++ b/bitpanda/index.html
@@ -137,7 +137,7 @@
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/">Avis eToro</a>
-<a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Découvrir Bitpanda</a>
+<a class="btn cta" data-aff="bitpanda" href="#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Essayer Bitpanda</a>
 </div>
 </div>
 </header>
