--- a/de/bitpanda/index.html
+++ b/de/bitpanda/index.html
@@ -137,7 +137,7 @@
 <a aria-current="page" class="active" data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/de/">eToro Bewertung</a>
-<a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Bitpanda entdecken</a>
+<a class="btn cta" data-aff="bitpanda" href="#konto-eroeffnen" rel="sponsored noopener noreferrer" target="_blank">Bitpanda testen</a>
 </div>
 </div>
 </header>
