--- a/en/bitpanda/index.html
+++ b/en/bitpanda/index.html
@@ -137,7 +137,7 @@
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/en/">eToro review</a>
-<a class="btn cta" data-aff="bitpanda" href="#open-account" rel="sponsored noopener noreferrer" target="_blank">Discover Bitpanda</a>
+<a class="btn cta" data-aff="bitpanda" href="#open-account" rel="sponsored noopener noreferrer" target="_blank">Try Bitpanda</a>
 </div>
 </div>
 </header>
