--- a/en/blog-1/index.html
+++ b/en/blog-1/index.html
@@ -116,7 +116,7 @@
 <a data-lang="de" href="/de/blog-1/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/en/bitpanda/">Bitpanda review</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start on eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Try eToro</a>
 </div>
 </div>
 </header>
