--- a/es/bitpanda/index.html
+++ b/es/bitpanda/index.html
@@ -137,7 +137,7 @@
 <a data-lang="de" href="/de/bitpanda/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/es/">Reseña eToro</a>
-<a class="btn cta" data-aff="bitpanda" href="#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Descubrir Bitpanda</a>
+<a class="btn cta" data-aff="bitpanda" href="#abrir-cuenta" rel="sponsored noopener noreferrer" target="_blank">Probar Bitpanda</a>
 </div>
 </div>
 </header>
