--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </div>
 <!-- CTA global -->
 <a class="header-link" href="/bitpanda/">Avis Bitpanda</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Essayer eToro</a>
 </div>
 </div>
 </header>
