--- a/de/index.html
+++ b/de/index.html
@@ -105,7 +105,7 @@
 </div>
 <!-- Global CTA -->
 <a class="header-link" href="/de/bitpanda/">Bitpanda Bewertung</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start auf eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">eToro testen</a>
 </div>
 </div>
 </header>
