--- a/en/index.html
+++ b/en/index.html
@@ -106,7 +106,7 @@
 </div>
 <!-- Global CTA -->
 <a class="header-link" href="/en/bitpanda/">Bitpanda review</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Start on eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Try eToro</a>
 </div>
 </div>
 </header>
