--- a/es/privacy-policy/index.html
+++ b/es/privacy-policy/index.html
@@ -129,7 +129,7 @@
 <a data-lang="de" href="/de/privacy-policy/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/es/bitpanda/">Reseña Bitpanda</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Empieza en eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-en#open-account" rel="sponsored noopener noreferrer" target="_blank">Probar eToro</a>
 </div>
 </div>
 </header>
