--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -108,7 +108,7 @@
 <a data-lang="de" href="/de/legal-notice/" hreflang="de">DE</a>
 </div>
 <a class="header-link" href="/bitpanda/">Avis Bitpanda</a>
-<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Commencer sur eToro</a>
+<a class="btn cta" data-aff="https://med.etoro.com/B12087_A126072_TClick_Savis-invest.aspx" href="/sources/etoro-fr#ouvrir-compte" rel="sponsored noopener noreferrer" target="_blank">Essayer eToro</a>
 </div>
 </div>
 </header>
